<resources>
    <string name="app_name">News</string>
    <string name="categories">Categories</string>
    <string name="politics">Politics</string>
    <string name="business">Business</string>
    <string name="science">Science</string>
    <string name="entertainment">Entertainment</string>
    <string name="sports">Sports</string>
    <string name="health">Health</string>
    <string name="trending">Trending</string>
</resources>