<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dashboard"
    android:background="#2c333d">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/categories"
        android:layout_marginTop="12dp"
        android:textColor="#4899ff"
        android:textSize="18sp"
        android:fontFamily="@font/roboto"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:weightSum="1">

            <androidx.cardview.widget.CardView
                android:id="@+id/politics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true">


                <LinearLayout
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="25dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/political"
                        android:contentDescription="@string/politics"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/politics"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/business"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true">


                <LinearLayout
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="25dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/businessman"
                        android:contentDescription="@string/business"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/business"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/science"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true">


                <LinearLayout
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="25dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/atomic"
                        android:contentDescription="@string/science"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/science"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/entertainment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true">


                <LinearLayout
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="25dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/clapperboard"
                        android:contentDescription="@string/entertainment"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/entertainment"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/sports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true">


                <LinearLayout
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="25dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ball"
                        android:contentDescription="@string/sports"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/sports"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/health"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true">


                <LinearLayout
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="25dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/cardiogram"
                        android:contentDescription="@string/health"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/health"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>


    </HorizontalScrollView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/trending"
        android:textColor="#4899ff"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:listitem="@layout/item_news" />


</androidx.constraintlayout.widget.ConstraintLayout>


